[package]
name = "cosmic-garden"
version = "0.1.8"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/msukanen/cosmic-garden.git"

[dependencies]
ansi_term = "0.12.1"
argon2 = { version = "0.5.3", features = ["std"]}
async-trait = "0.1.89"
clap = { version = "4.6.0", features = ["derive", "env"]}
dicebag = "0.3.12"
env_logger = "0.11.10"
futures = "0.3.32"
lazy_static = "1.5.0"
log = "0.4.29"
once_cell = "1.21.4"
paste = "1.0.15"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sha1 = "0.11.0"
tokio = { version = "1.51.1", features = ["full"]}
toml = "1.1.2"
unicode-normalization = "0.1.25"
uuid = { version = "1.23.0", features = ["v4", "serde"]}
cosmic-garden-pm = { path = "../cosmicgarden-pm" }
thiserror = "2.0.18"
hex = "0.4.3"
either = "1.15.0"
convert_case = "0.11.0"

[build-dependencies]
walkdir = "2.5.0"
heck = "0.5.0"
lazy_static = "1.5.0"
pathdiff = "0.2.3"
env_logger = "0.11"
log = "0.4"

[badges]
maintenance = { status = "experimental" }

[features]
default = []
no-hibp = []
localtest = []
stresstest = []
